updated openapi-core.yml + added models
