# docs/openapi-core.yml
@@ -7,46 +7,66 @@ info:
 servers:
   - url: http://localhost:4000
 tags:
-  - name: examples
+  - name: books
+  - name: authors
+  - name: publishers
 paths:
-  /examples:
+  /books:
     post:
       tags:
-        - examples
-      summary: Example POST route
-      description: Description of an example POST route
+        - books
+      summary: Create a book
+      description: Create a new book
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateExample'
+              $ref: '#/components/schemas/CreateBook'
       responses:
         201:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Example'
+                $ref: '#/components/schemas/Book'
     get:
       tags:
-        - examples
-      summary: Example GET route
-      description: Description of an example GET route
+        - books
+      summary: Get books
+      description: Get all books
       responses:
         200:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AllExamples'
-  /examples/{id}:
-    put:
+                $ref: '#/components/schemas/AllBooks'
+  /books/{id}:
+    get:
       tags:
-        - examples
-      summary: Example PUT route
-      description: Description of an example PUT route
+        - books
+      summary: Get book
+      description: Get a book
       parameters:
         - name: id
           in: path
-          description: The ID of the example to update
+          description: The ID of the book to get
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Book'
+    put:
+      tags:
+        - books
+      summary: Update a book
+      description: Update a book by ID
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the book to update
           required: true
           schema:
             type: integer
@@ -54,22 +74,22 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/CreateExample'
+              $ref: '#/components/schemas/CreateBook'
       responses:
         201:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Example'
+                $ref: '#/components/schemas/Book'
     delete:
       tags:
-        - examples
-      summary: Example DELETE route
-      description: Description of an example DELETE route
+        - books
+      summary: Delete a book
+      description: Delete a book by ID
       parameters:
         - name: id
           in: path
-          description: The ID of the example to delete
+          description: The ID of the book to delete
           required: true
           schema:
             type: integer
@@ -78,39 +98,289 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Example'
+                $ref: '#/components/schemas/Book'
+  /authors:
+    post:
+      tags:
+        - authors
+      summary: Create an author
+      description: Create a new author
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateAuthor'
+      responses:
+        201:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Author'
+    get:
+      tags:
+        - authors
+      summary: Get authors
+      description: Get all authors
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AllAuthors'
+  /authors/{id}:
+    get:
+      tags:
+        - authors
+      summary: Get author
+      description: Get an author
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the author to get
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Author'
+    put:
+      tags:
+        - authors
+      summary: Update an author
+      description: Update an author by ID
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the author to update
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateAuthor'
+      responses:
+        201:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Author'
+    delete:
+      tags:
+        - authors
+      summary: Delete an author
+      description: Delete an author by ID
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the author to delete
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Author'
+  /publishers:
+    post:
+      tags:
+        - publishers
+      summary: Create a publisher
+      description: Create a new publisher
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreatePublisher'
+      responses:
+        201:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Publisher'
+    get:
+      tags:
+        - publishers
+      summary: Get publishers
+      description: Get all publishers
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AllPublishers'
+  /publishers/{id}:
+    get:
+      tags:
+        - publishers
+      summary: Get publisher
+      description: Get a publisher
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the publisher to get
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Publisher'
+    put:
+      tags:
+        - publishers
+      summary: Update a publisher
+      description: Update a publisher by ID
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the publisher to update
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreatePublisher'
+      responses:
+        201:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Publisher'
+    delete:
+      tags:
+        - publishers
+      summary: Delete a publisher
+      description: Delete a publisher by ID
+      parameters:
+        - name: id
+          in: path
+          description: The ID of the publisher to delete
+          required: true
+          schema:
+            type: integer
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Publisher'
 
 components:
   schemas:
-    CreateExample:
+    CreateBook:
       type: object
-      required: [propertyOne, propertyTwo]
+      required: [title, genre, author_id, publisher_id]
       properties:
-        propertyOne:
+        title:
           type: string
-          example: "Example Value"
-        propertyTwo:
-          type: email
-          format: email
-          example: "example@email.value"
-    Example:
+          example: "The Lord of the Rings"
+        genre:
+          type: string
+          example: "Fantasy"
+        author_id:
+          type: integer
+          example: 1
+        publisher_id:
+          type: integer
+          example: 1
+    Book:
       type: object
       properties:
         id:
           type: integer
           example: 1
-        propertyOne:
+        title:
           type: string
-          example: "Example Value"
-        propertyTwo:
+          example: "The Lord of the Rings"
+        genre:
           type: string
-          example: "example@email.value"
-        createdAt:
-          type: string
-          format: DateTime
-          pattern: YYYY-MM-DDTHH:MM:SS
-          example: 2023-03-14T11:01:56.633+00:00
-    AllExamples:
+          example: "Fantasy"
+        author_id:
+          type: integer
+          example: 1
+        publisher_id:
+          type: integer
+          example: 1
+    AllBooks:
       type: array
       items:
-        $ref: '#/components/schemas/Example'
+        $ref: '#/components/schemas/Book'
+
+    CreateAuthor:
+      type: object
+      required: [first_name, last_name, email, alive]
+      properties:
+        first_name:
+          type: string
+          example: "John R.R."
+        last_name:
+          type: string
+          example: "Tolkien"
+        email:
+          type: email
+          format: email
+          example: "john@tolkien.com"
+        alive:
+          type: boolean
+          example: true
+    Author:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        first_name:
+          type: string
+          example: "John R.R."
+        last_name:
+          type: string
+          example: "Tolkien"
+        email:
+          type: email
+          format: email
+          example: "john@tolkien.com"
+        alive:
+          type: boolean
+          example: true
+    AllAuthors:
+      type: array
+      items:
+        $ref: '#/components/schemas/Author'
+
+    CreatePublisher:
+      type: object
+      required: [name, location]
+      properties:
+        name:
+          type: string
+          example: "Allen and Unwin"
+        location:
+          type: string
+          example: "Crows Nest, Australia"
+    Publisher:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 1
+        name:
+          type: string
+          example: "Allen and Unwin"
+        location:
+          type: string
+          example: "Crows Nest, Australia"
+    AllPublishers:
+      type: array
+      items:
+        $ref: '#/components/schemas/Publisher'
